--- a/index.html
+++ b/index.html
@@ -111,3 +111,42 @@
   </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Crypto Mining Website</title>
+    <style>
+        /* Navigation Bar Styling */
+        .navbar {
+            display: flex;
+            background-color: #333;
+            overflow: hidden;
+        }
+        .navbar a {
+            flex: 1;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        .navbar a:hover {
+            background-color: #575757;
+        }
+    </style>
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#mining">Start Mining</a>
+        <a href="#faq">FAQ</a>
+        <a href="#contact">Contact</a>
+    </div>
+
+    <!-- Page Content -->
+    <h1>Welcome to My Crypto Mining Website</h1>
+    <p>Start mining cryptocurrencies from your browser!</p>
+</body>
+</html>
