--- a/index.html
+++ b/index.html
@@ -150,3 +150,11 @@
     <p>Start mining cryptocurrencies from your browser!</p>
 </body>
 </html>
+<nav>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About Mining</a></li>
+    <li><a href="#mine">Start Mining</a></li>
+    <li><a href="#faq">FAQ</a></li>
+  </ul>
+</nav>
