--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Mining Site</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Mine cryptocurrency directly from your browser, including Bitcoin and Ethereum. Easy setup, secure transactions, and user-friendly design.">
+    <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining, Bitcoin mining, Ethereum mining, cryptocurrency">
 </head>
 <body>
     <header>
@@ -26,6 +28,11 @@
 
     <section id="mining">
         <h2>Start Mining</h2>
+        <label for="mining-mode">Select Mining Mode:</label>
+        <select id="mining-mode">
+            <option value="cpu">CPU Mining</option>
+            <option value="gpu">GPU Mining</option>
+        </select>
         <button onclick="startMining()">Start Mining</button>
         <button onclick="stopMining()">Stop Mining</button>
         <p id="mining-status">Status: Not Mining</p>
@@ -36,15 +43,15 @@
         <p>Total Mined: <span id="total-mined">0</span> coins</p>
         <p>Estimated Earnings: <span id="estimated-earnings">$0.00</span></p>
         <p>Enter Wallet Address:</p>
-        <input type="text" id="wallet-address" placeholder="Your wallet address">
+        <input type="text" id="wallet-address" placeholder="Your wallet address" onblur="validateWalletAddress(this.value)">
     </section>
 
     <section id="faq">
         <h2>FAQ</h2>
         <h3>How does mining work?</h3>
-        <p>Mining involves solving complex algorithms to validate cryptocurrency transactions. Your browser’s CPU is utilized for this process.</p>
+        <p>Mining involves solving complex algorithms to validate cryptocurrency transactions. Your browser’s CPU or GPU is utilized for this process.</p>
         <h3>What is the 1% fee?</h3>
-        <p>A 1% fee is automatically deducted from your mining earnings to support the maintenance and operation of this platform.</p>
+        <p>A 1% fee is automatically deducted from your mining earnings to support the maintenance and operation of this platform. The fee is sent to the platform's wallet: <strong>0x09d9dfA5Dc0CCD94356DE335EF2c3bf2daF64e77</strong>.</p>
         <h3>How can I withdraw my earnings?</h3>
         <p>Enter your wallet address in the dashboard, and your mined cryptocurrency will be sent there automatically once thresholds are met.</p>
     </section>
@@ -56,3 +63,12 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<script>
+function validateWalletAddress(address) {
+    const walletRegex = /^(0x[a-fA-F0-9]{40})$/;
+    if (!walletRegex.test(address)) {
+        alert("Invalid wallet address format. Please enter a valid Ethereum wallet address.");
+    }
+}
+</script>
