--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
         <p>&copy; 2025 Crypto Mining Site. All rights reserved.</p>
     </footer>
 
-  <script src="js/mining-script.js"></script>
+ <script src="mining-script.js"></script>
 </body>
 </html>
