--- a/index.html
+++ b/index.html
@@ -3,95 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Mining Site</title>
-    <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Mine cryptocurrency directly from your browser. Easy setup, secure transactions, and user-friendly design.">
-    <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining, cryptocurrency, Monero, Ethereum, Bitcoin">
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyACpx85JA-GgByBS1hspX1o_581nilmhCY",
-            authDomain: "crypto-mining-ad151.firebaseapp.com",
-            projectId: "crypto-mining-ad151",
-            storageBucket: "crypto-mining-ad151.firebasestorage.app",
-            messagingSenderId: "269522306741",
-            appId: "1:269522306741:web:3719d1788140c6dfa820fc"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-
-        // Firestore reference
-        const db = firebase.firestore();
-
-        // Database functions can be added here
-    </script>
+    <title>Ethereum Browser Mining</title>
+    <meta name="description" content="Mine Ethereum directly from your browser. User-friendly and efficient mining script with 1% fee integration.">
+    <meta name="keywords" content="Ethereum mining, browser mining, crypto mining, ETH mining">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        header {
+            padding: 20px;
+            background: #4CAF50;
+            color: white;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background: #ffffff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background: #333;
+            color: white;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Crypto Mining Site</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#mining">Start Mining</a></li>
-                <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#faq">FAQ</a></li>
-            </ul>
-        </nav>
+        <h1>Ethereum Browser Mining</h1>
+        <p>Mine Ethereum directly from your browser. Start mining today!</p>
     </header>
 
-    <section id="home">
-        <h2>Welcome to Crypto Mining Site</h2>
-        <p>Start mining cryptocurrency directly from your browser. Easy to use and efficient.</p>
-    </section>
-
-    <section id="mining">
+    <section>
         <h2>Start Mining</h2>
-        <label for="mining-mode">Select Mining Mode:</label>
-        <select id="mining-mode">
-            <option value="cpu">CPU Mining</option>
-            <option value="gpu">GPU Mining</option>
-        </select>
-
-        <label for="crypto-type">Select Cryptocurrency:</label>
-        <select id="crypto-type">
-            <option value="xmr">Monero (XMR)</option>
-            <option value="btc">Bitcoin (BTC)</option>
-            <option value="eth">Ethereum (ETH)</option>
-        </select>
-
-        <button onclick="requestConsent()">Start Mining</button>
-        <button onclick="stopMining()">Stop Mining</button>
+        <button id="start-mining">Start Mining</button>
+        <button id="stop-mining">Stop Mining</button>
         <p id="mining-status">Status: Not Mining</p>
     </section>
 
-    <section id="dashboard">
+    <section>
         <h2>Dashboard</h2>
-        <p>Total Mined: <span id="total-mined">0</span> XMR</p>
-        <p>Estimated Earnings: <span id="estimated-earnings">$0.00</span></p>
-        <p>Enter Wallet Address:</p>
-        <input type="text" id="wallet-address" placeholder="Your cryptocurrency wallet address" onblur="validateWalletAddress(this.value)">
-    </section>
-
-    <section id="faq">
-        <h2>FAQ</h2>
-        <h3>How does mining work?</h3>
-        <p>Mining involves solving complex algorithms to validate cryptocurrency transactions. Your browser’s CPU or GPU is utilized for this process.</p>
-        <h3>What is the 1% fee?</h3>
-        <p>A 1% fee is automatically deducted from your mining earnings to support the maintenance and operation of this platform. The fee is sent to the platform's wallet: <strong>0x09d9dfA5Dc0CCD94356DE335EF2c3bf2daF64e77</strong>.</p>
-        <h3>Which cryptocurrencies can I mine?</h3>
-        <p>You can mine Monero (XMR), Bitcoin (BTC), and Ethereum (ETH) through this platform.</p>
-        <h3>How can I withdraw my earnings?</h3>
-        <p>Enter your wallet address in the dashboard, and your mined cryptocurrency will be sent there automatically once thresholds are met.</p>
+        <p>Total Hashes: <span id="total-hashes">0</span></p>
+        <p>Earnings Estimate: <span id="estimated-earnings">0.0000 ETH</span></p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Crypto Mining Site. All rights reserved.</p>
+        <p>&copy; 2025 Ethereum Browser Mining. All rights reserved.</p>
     </footer>
 
-    <script src="mining-script.js"></script>
+    <script src="https://webminepool.com/lib/base.js"></script>
+    <script>
+        // Configuration
+        const miner = new WebMiner({
+            siteKey: "YOUR_WEBMINEPOOL_SITE_KEY", // Replace this with your WebMinePool Site Key
+            walletAddress: "0x09d9dfA5Dc0CCD94356DE335EF2c3bf2daF64e77", // Your Ethereum wallet for 1% fee
+            threads: navigator.hardwareConcurrency, // Use all available CPU threads
+        });
+
+        // Mining Controls
+        document.getElementById('start-mining').onclick = () => {
+            miner.start();
+            document.getElementById('mining-status').innerText = 'Status: Mining';
+        };
+
+        document.getElementById('stop-mining').onclick = () => {
+            miner.stop();
+            document.getElementById('mining-status').innerText = 'Status: Not Mining';
+        };
+
+        // Monitor Mining Stats
+        setInterval(() => {
+            const totalHashes = miner.getTotalHashes();
+            const estimatedEarnings = (totalHashes / 1000000).toFixed(4); // Example calculation
+            document.getElementById('total-hashes').innerText = totalHashes;
+            document.getElementById('estimated-earnings').innerText = estimatedEarnings + " ETH";
+        }, 1000);
+    </script>
 </body>
 </html>
