--- a/index.html
+++ b/index.html
@@ -119,6 +119,6 @@
             currentBalance = 0.0;
             updateBalance(0);
         }
-    </script>
+<script src="script.js"></script>
 </body>
 </html>
