--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Mining Site</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Mine cryptocurrency directly from your browser. Easy setup, secure transactions, and user-friendly design. Withdraw earnings once you reach the $30 threshold.">
+    <meta name="description" content="Mine cryptocurrency directly from your browser. Easy setup, secure transactions, and user-friendly design.">
     <meta name="keywords" content="crypto mining, browser mining, GPU mining, CPU mining, cryptocurrency, Bitcoin, Ethereum">
 </head>
 <body>
@@ -33,28 +33,23 @@
             <option value="gpu">GPU Mining</option>
         </select>
 
-        <p>Enter Your Wallet Address:</p>
-        <input type="text" id="user-wallet" placeholder="Enter your BTC wallet address">
-        <p>Note: A 1% fee will be sent to the platform wallet: <strong>3CfmH7xn3Q5D1oUTPv3fTxWPXLcRao49ep</strong>.</p>
-
         <button onclick="startMining()">Start Mining</button>
         <button onclick="stopMining()">Stop Mining</button>
         <p id="mining-status">Status: Not Mining</p>
 
-        <p>Current Balance: <span id="current-balance">0.00000000</span> BTC</p>
-        <button id="withdraw-button" onclick="withdrawEarnings()" disabled>Withdraw Earnings</button>
+        <p>Enter Your Wallet Address:</p>
+        <input type="text" id="user-wallet" placeholder="Enter your BTC wallet address">
+        <p>Note: A 1% fee will be automatically deducted to support platform maintenance and operation.</p>
     </section>
 
     <section id="faq">
         <h2>FAQ</h2>
         <h3>How does mining work?</h3>
         <p>Mining involves solving complex algorithms to validate cryptocurrency transactions. Your browser’s CPU or GPU is utilized for this process.</p>
-        <h3>What is the $30 payout threshold?</h3>
-        <p>You can withdraw your earnings once your balance reaches $30 worth of mined cryptocurrency. A 1% fee will be deducted from the total amount.</p>
         <h3>What is the 1% fee?</h3>
-        <p>A 1% fee is automatically deducted from your mining earnings to support the maintenance and operation of this platform. The fee is sent to the platform's wallet: <strong>3CfmH7xn3Q5D1oUTPv3fTxWPXLcRao49ep</strong>.</p>
+        <p>A 1% fee is automatically deducted from your mining earnings to support the maintenance and operation of this platform.</p>
         <h3>How can I withdraw my earnings?</h3>
-        <p>Enter your wallet address in the mining section. Once you reach the threshold, click the "Withdraw Earnings" button to receive your payout.</p>
+        <p>Enter your wallet address in the mining section. Your mined cryptocurrency will be sent there automatically once thresholds are met.</p>
     </section>
 
     <footer>
@@ -72,17 +67,14 @@
                 return;
             }
             document.getElementById('mining-status').innerText = `Mining started for wallet: ${walletAddress}`;
-            // Simulate balance increment
             simulateMining();
         }
 
         function stopMining() {
             document.getElementById('mining-status').innerText = 'Mining stopped';
-            // Stop mining script
         }
 
         function simulateMining() {
-            // Simulate mining progress
             const miningInterval = setInterval(() => {
                 if (document.getElementById('mining-status').innerText === 'Mining stopped') {
                     clearInterval(miningInterval);
@@ -100,11 +92,7 @@
 
         function checkThreshold() {
             const withdrawButton = document.getElementById('withdraw-button');
-            if (currentBalance >= threshold) {
-                withdrawButton.disabled = false;
-            } else {
-                withdrawButton.disabled = true;
-            }
+            withdrawButton.disabled = currentBalance < threshold;
         }
 
         function withdrawEarnings() {
@@ -115,10 +103,9 @@
             }
 
             alert(`Withdrawing ${currentBalance.toFixed(8)} BTC to wallet: ${walletAddress}`);
-            // Reset balance after withdrawal
             currentBalance = 0.0;
             updateBalance(0);
         }
-<script src="script.js"></script>
+    </script>
 </body>
 </html>
